changed output filenames to include time integrator, started updating plot scripts

--- a/transport/README
+++ b/transport/README
@@ -18,7 +18,8 @@ Input file: ./input
 
 To plot the results:
 ---------------------------------------------------------------------------------
-./plot
-Also, some gnuplot scripts are available in ./plotscripts:
-solution.gp
-viscosity.gp
+$ ./plot
+
+To plot convergence:
+---------------------------------------------------------------------------------
+$ ./plot_convergence
