--- a/transport/doc/max_principle_FCT/content/unused_content/steadystate_FCT.tex
+++ b/transport/doc/max_principle_FCT/content/unused_content/steadystate_FCT.tex
@@ -6,11 +6,11 @@
 %================================================================================
 Without strongly imposing Dirichlet boundary conditions, the high-order system is
 \begin{equation}\label{ss_high}
-   \mathbf{A}^H\mathbf{U}^H = -\mathbf{K}\mathbf{U}^H = \mathbf{b},
+   \mathbf{A}^H\mathbf{U}^H = (\mathbf{K}^H + \mathbf{R}^H)\mathbf{U}^H = \mathbf{b},
 \end{equation}
 and the corresponding low-order system is
 \begin{equation}\label{ss_low}
-   \mathbf{A}^L\mathbf{U}^L = -(\mathbf{K} + \mathbf{D})\mathbf{U}^L = \mathbf{b},
+   \mathbf{A}^L\mathbf{U}^L = (\mathbf{K}^H - \mathbf{D} + \mathbf{R}^L)\mathbf{U}^L = \mathbf{b},
 \end{equation}
 
 After strongly imposing Dirichlet boundary conditions, the linear
@@ -32,22 +32,26 @@ $\mathbf{A}\mathbf{U}=\mathbf{b}$, row $i$ of the system becomes
 where $c$ is an arbitrary constant, usually taken to be 1, and $\mathcal{D}$ is the set
 of degrees of freedom indices subject to Dirichlet boundary conditions.
 %--------------------------------------------------------------------------------
-\subsubsection{Kuzmin's Flux Correction Algorithm}
+\subsubsection{Flux Correction Algorithm}
 %--------------------------------------------------------------------------------
 The flux correction vector $\mathbf{f}$ is defined such that:
 \begin{equation}\label{ss_kuzminfc}
-   \mathbf{A}^L\mathbf{U}^H = \mathbf{b} + \mathbf{f} \equiv \mathbf{b}^F,
+   \mathbf{A}^L\mathbf{U}^H = (\mathbf{K}^H - \mathbf{D} + \mathbf{R}^L)\mathbf{U}^H = \mathbf{b} + \mathbf{f} \equiv \mathbf{b}^F,
 \end{equation}
 Subtracting Equation \ref{ss_high} from \ref{ss_kuzminfc} gives the definition of
 $\mathbf{f}$:
 \begin{equation}\label{ss_kuzminFdef}
-   \mathbf{f} \equiv -\mathbf{D}\mathbf{U}^H,
+   \mathbf{f} \equiv -\mathbf{C}\mathbf{U}^H,
 \end{equation}
-Since $\mathbf{D}$ is symmetric
-and feature zero row and column sums, a valid decomposition for $\mathbf{f}$,
+where
+\begin{equation}
+   \mathbf{C}\equiv \mathbf{D} + \mathbf{R}^H - \mathbf{R}^L.
+\end{equation}
+Since $\mathbf{C}$ is symmetric
+and features zero row and column sums, a valid decomposition for $\mathbf{f}$,
 called $\mathbf{F}$, is
 \begin{equation}
-   F_{i,j} = D_{i,j}(U^H_i - U^H_j).
+   F_{i,j} = C_{i,j}(U^H_i - U^H_j).
 \end{equation}
 Applying a limiter to Equation \ref{ss_kuzminfc} gives
 \begin{equation}\label{ss_limited}
@@ -103,23 +107,23 @@ where $(\mathcal{L}[\mathbf{F}])_i = \mathcal{L}_{i,:}F_{i,:}^T
 \subsubsection{Deriving the Limiting Coefficients}
 %================================================================================
 \begin{lemma}\label{ss_coef}
-   The following definitions yield maximum-principle preserving limiting coefficients,
-   where $W_i^\pm$ are defined to be to be upper and lower bounds of the maximum
-   principle given by Equation \ref{ss_max_principle}:
+   The maximum principle
    \begin{equation}
-      W_i^+ \equiv  \left(1 - \frac{1}{A^L_{i,i}}\sum\limits_j A^L_{i,j}\right)U_{max,i}^L
-      + \frac{b_i}{A^L_{i,i}},
+      -\frac{1}{A^L_{i,i}}\sum\limits_{j\ne i} A^L_{i,j}
+      U_{\min,i}
+      + \frac{b_i}{A^L_{i,i}}
+      \leq U_i\leq
+      -\frac{1}{A^L_{i,i}}\sum\limits_{j\ne i} A^L_{i,j}
+      U_{\max,i}
+      + \frac{b_i}{A^L_{i,i}}\quad\forall i,
    \end{equation}
-   \begin{equation}
-      W_i^- \equiv  \left(1 - \frac{1}{A^L_{i,i}}\sum\limits_j A^L_{i,j}\right)U_{min,i}^L
-      + \frac{b_i}{A^L_{i,i}},
-   \end{equation}
+   is satisfied using the following definitions of limiting coefficients:
    \begin{equation}\label{P_defs}
       P_i^+ \equiv \sum\limits_j\max(0,F_{i,j}) \qquad
       P_i^- \equiv \sum\limits_j\min(0,F_{i,j}),
    \end{equation}
    \begin{equation}
-      Q_i^\pm \equiv A_{i,i}^L W_i^\pm + \sum\limits_{j\ne i} A_{i,j}^L U_j^F - b_i,
+      Q_i^\pm \equiv \sum\limits_{j\ne i}A_{i,j}^L(U_j - U_{\substack{\max\\\min},i}),
    \end{equation}
    \begin{equation}\label{R_defs}
       R_i^\pm \equiv\left\{
@@ -172,11 +176,13 @@ where $(\mathcal{L}[\mathbf{F}])_i = \mathcal{L}_{i,:}F_{i,:}^T
    \]
    Taking row $i$ of the linear system given by Equation \ref{ss_limited} gives
    \begin{eqnarray*}
-      A^L_{i,i} U_i^F + \sum\limits_{j\ne i} A_{i,j}^L U_j^F - b_i
-         & = & \sum\limits_j \mathcal{L}_{i,j}F_{i,j}\\
-         & \leq & Q_i^+\\
-         & \leq & A_{i,i}^L W_i^+ + \sum\limits_{j\ne i} A_{i,j}^L U_j^F - b_i\\
-      U_i & \leq & W_i^+.
+      A^L_{i,i} U_i + \sum\limits_{j\ne i} A_{i,j}^L U_j
+         & = & \sum\limits_j \mathcal{L}_{i,j}F_{i,j} + b_i\\
+         & \leq & Q_i^+ + b_i\\
+         & \leq & \sum\limits_{j\ne i}A_{i,j}^L(U_j - U_{\max,i}) + b_i\\
+      A^L_{i,i} U_i & \leq & -\sum\limits_{j\ne i} A_{i,j}^L U_{\max,i} + b_i\\
+      U_i & \leq & -\frac{1}{A^L_{i,i}}\sum\limits_{j\ne i} A_{i,j}^L U_{\max,i}
+         + \frac{b_i}{A^L_{i,i}}.
    \end{eqnarray*}
    The lower bound is proved similarly.
    \qed
