--- a/transport/doc/FCT_notes/FCT_notes.tex
+++ b/transport/doc/FCT_notes/FCT_notes.tex
@@ -13,14 +13,21 @@
 \maketitle
 \tableofcontents
 
-\include{content/introduction}
-\include{content/maximum_principles}
-\include{content/discretization}
-\include{content/low_order_scheme_algebraic}
-\include{content/low_order_scheme_graphtheoretic}
-\include{content/DMP}
-\include{content/high_order_scheme}
-\include{content/FCT_scheme}
-\include{content/implementation}
+\input{content/introduction}
+\input{content/maximum_principles}
+\input{content/discretization}
+\input{content/low_order_scheme_algebraic}
+\input{content/low_order_scheme_graphtheoretic}
+\input{content/steadystate_DMP}
+\input{content/explicit_DMP}
+\input{content/theta_DMP}
+\input{content/high_order_scheme}
+\input{content/steadystate_FCT}
+\input{content/transient_FCT}
+\input{content/limiting_coefficients}
+\input{content/steadystate_Q}
+\input{content/explicit_Q}
+\input{content/theta_Q}
+\input{content/implementation}
 
 \end{document}
