--- a/transport/doc/FCT_notes/content/introduction.tex
+++ b/transport/doc/FCT_notes/content/introduction.tex
@@ -4,24 +4,12 @@
 The radiation transport equation is the following:
 \begin{equation}\label{tr}
 	\frac{1}{c}\frac{\partial \psi}{\partial t} + \mathbf{\Omega}\cdot\nabla\psi(\mathbf{x},t)
-      + \sigma(\mathbf{x})\psi(\mathbf{x},t) = q(\mathbf{x},t).
+      + \sigma(\mathbf{x})\psi(\mathbf{x},t) = q(\mathbf{x},t),
 \end{equation}
-Here $q(\mathbf{x},t)$ represents the total source (extraneous plus scattering).
-%If necessary, source iteration can be employed to converge the angular fluxes:
-%\begin{equation}
-	%(\mathbf{\Omega}\cdot\nabla + \sigma)\psi^{\ell+1} = q^\ell,
-%\end{equation}
-%
-%Note that for implicit time stepping, we solve an equation that is similar
-%to the steady-state case:
-%\begin{equation}
-	%(\mathbf{\Omega}\cdot\nabla + \sigma^\ast)\psi^{n+1} =
-      %q^{n+1}+\tfrac{\psi^n}{c\Delta t},
-%\end{equation}
-%with $\sigma^\ast = \sigma + \tfrac{1}{c\Delta t}$. Source iteration can be applied as well if scattering is present:
-%\begin{equation}
-	%(\mathbf{\Omega}\cdot\nabla + \sigma_t^\ast)\psi^{n+1,\ell+1} = q^{n+1,\ell}+\tfrac{\psi^n}{c\Delta t}.
-%\end{equation}
+where $\psi(\mathbf{x},t)$ is the angular flux at position $\mathbf{x}$ and time
+$t$ in direction $\mathbf{\Omega}$, $c$ is the transport speed, $\sigma(\mathbf{x})$
+is the \emph{macroscopic} cross-section, and $q(\mathbf{x},t)$ is the
+total source (extraneous plus scattering).
 The problem definition is completed with an incoming flux boundary condition:
 \begin{equation}
    \psi(\mathbf{x}) = \psi^{inc}(\mathbf{x})  \quad \forall \mathbf{x}\in \partial V^-,
@@ -31,8 +19,3 @@ For transient problems, the following initial condition applies:
 \begin{equation}
    \psi(\mathbf{x},t) = \psi^0(\mathbf{x})  \quad \forall \mathbf{x}\in V.
 \end{equation}
-Note that
-\[
-   \sigma(\mathbf{x}) \ge 0
-\]
-with $\sigma(\mathbf{x})=0$ occurring only in voids.
