--- a/transport/doc/FCT_notes/FCT_notes.tex
+++ b/transport/doc/FCT_notes/FCT_notes.tex
@@ -6,7 +6,7 @@
 \title{Maximum-Principle Preserving Finite Element Method for the Radiation Transport Equation}
 \author{Jean-Luc Guermond\\Jean Ragusa\\Joshua Hansel}
 
-\newcommand{\tab}{\hspace*{0.5cm}}
+\input{newcommands}
 
 \begin{document}
 
@@ -28,6 +28,7 @@
 \input{content/steadystate_Q}
 \input{content/explicit_Q}
 \input{content/theta_Q}
+\input{content/nonlinear_iteration}
 \input{content/implementation}
 
 \end{document}
