--- a/transport/doc/FCT_notes/newcommands.tex
+++ b/transport/doc/FCT_notes/newcommands.tex
@@ -5,4 +5,9 @@
 \newcommand{\A}{\mathbf{A}}
 \newcommand{\D}{\mathbf{D}}
 \newcommand{\M}{\mathbf{M}}
+\newcommand{\F}{\mathbf{F}}
+\renewcommand{\L}{\mathcal{L}}
 \renewcommand{\b}{\mathbf{b}}
+\renewcommand{\r}{\mathbf{r}}
+\newcommand{\s}{\mathbf{s}}
+\newcommand{\dt}{\Delta t}
